登录页完成

--- a/back2/index.html
+++ b/back2/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<!-- 设置视口 -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="./lib/nprogress/nprogress.css">
 	<title>Document</title>
 </head>
 <body>
-	这是后台管理系统
+	
+	<script src="./lib/jquery/jquery.js"></script>
+	<script src="./lib/bootstrap/js/bootstrap.js"></script>
+	<!-- 引入了全局进度条 -->
+	<script src="./lib/nprogress/nprogress.js"></script>
+	<script src="./js/common.js"></script>
 </body>
 </html>
