--- a/back/login.html
+++ b/back/login.html
@@ -1,71 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <!-- 设置视口 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>乐淘电商</title>
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
-  <!-- 引入表单验证css，依赖于bootstrap -->
-  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
-  <!-- 引入自己的css -->
-  <link rel="stylesheet" href="./css/login.css">
-  <title>login</title>
-  <style>
-    .body-bg {
-      background: #222D32;
-    }
-    .col-lg-4 {
-      margin-top: 150px;
-    }
-    .panel-heading h3 {
-      text-align: center;
-      height: 40px;
-      line-height: 40px;
-      font-size: 18px;
-    }
-  </style>
+  <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
+  <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
+  <!-- 引入自己的 css -->
+  <link rel="stylesheet" href="./css/common.css">
 </head>
-<body class="body-bg">
-  <div class="container">
-    <!-- cv面板 -->
-    <div class="col-lg-4 col-lg-offset-4">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h3 class="panel-title">后台管理系统</h3>
+<body class="body_bg">
+
+
+<!-- 响应式版心 -->
+<div class="container">
+  <div class="col-lg-4 col-lg-offset-4 mt_150">
+
+    <!-- 面板 -->
+    <div class="panel panel-primary">
+      <!-- 头部 -->
+      <div class="panel-heading">
+        <h3 class="panel-title">后台管理系统</h3>
+      </div>
+
+      <!-- 面板内容 -->
+      <div class="panel-body">
+        <form class="form-horizontal" id="form">
+          <div class="form-group">
+            <label for="username"  class="col-sm-3 control-label">用户名</label>
+            <div class="col-sm-9">
+              <input type="text"  name="username"  class="form-control" id="username" placeholder="请输入用户名">
             </div>
-            <div class="panel-body">
-              <!-- cv表单 内容面板 -->
-              <form class="form-horizontal" id="form">
-                  <div class="form-group">
-                    <label for="username" class="col-sm-3 control-label">用户名：</label>
-                    <div class="col-sm-9">
-                      <input type="text" name="username" class="form-control" id="username" placeholder="请输入用户名..">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="password" class="col-sm-3 control-label leave">密&nbsp;&nbsp; 码：</label>
-                    <div class="col-sm-9">
-                      <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-sm-offset-3 col-sm-6">
-                      <button type="reset" class="btn btn-default pull-left">重置</button>
-                      <button type="submit" class="btn btn-primary pull-right">登录</button>
-                    </div>
-                  </div>
-                </form>
+          </div>
+          <div class="form-group">
+            <!-- 全角的空格, 可以用于调整间隙  -->
+            <label for="password" class="col-sm-3 control-label">密　码</label>
+            <div class="col-sm-9">
+              <input type="password" name="password" class="form-control" id="password" placeholder="请输入密码">
             </div>
-        </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-3 col-sm-6">
+              <button type="reset" class="btn btn-default pull-left">重置</button>
+              <button type="submit" class="btn btn-primary pull-right">登陆</button>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+
   </div>
-<!-- bootstrap依赖于jQuery -->
-<script src="./lib/jquery/jquery.js"></script>
+</div>
+
+
+
+<script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
-<!--引入表单验证js，依赖于bootstrap   -->
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
-<!-- 引入自己的js -->
+<script src="./lib/nprogress/nprogress.js"></script>
+<script src="./js/common.js"></script>
 <script src="./js/login.js"></script>
+
 </body>
 </html>
